# taskory

./: .gitignore  PRD.md  README.md  TODOS.md  pyproject.toml  requirements.txt  tasks.json
.cursor/rules/: code-words.mdc  project-rules.mdc
.taskory/: taskory.config  tasks.json
src/taskory/: cli.py  schemas.py
src/taskory/commands/: splash.py  task_store.py
tests/taskory/: test_schemas.py
tests/taskory/commands/: test_cli.py  test_task_store.py
