[tool.poetry]
name = "taskory"
version = "0.1.0"
description = "Taskory CLI and backend"
authors = ["Jeff <your-email@example.com>"]

[tool.poetry.dependencies]
python = "3.11.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
taskory = "taskory.cli:app" 